[package]
name = "quadratic_sieve"
version = "0.1.0"
authors = ["Evan Severson <severson.evan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-gmp = "0.5.0"
num-integer = "0.1.44"
num-traits = "0.2.14"
primitive-types = "0.7.3"
